--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -14,60 +14,63 @@ body {
   font-family: "Cormorant Garamond";
 }
 
-header {
-  height: 80px;
-}
-
-h1 {
-  margin: 0;
-  display: inline-block;
-  color: #eaebed;
-  width: 60%;
-  padding-left: 40px;
-  padding-bottom: 12px;
-  padding-top: 5px;
-  font-size: 2rem;
-  text-shadow: 1px 1px 2px black;
-}
-
 nav {
   background-color: #014421;
-  height: 80px;
   display: flex;
   align-items: center;
   position: fixed;
   top: 0;
   width: 100%;
 }
-nav ul {
-  margin: 0;
-  display: inline-block;
+@media only screen and (max-width: 768px) {
+  nav {
+    flex-direction: column;
+  }
+}
+nav h1 {
   display: flex;
-  justify-content: space-around;
   align-items: center;
+  flex-grow: 1;
+  margin: 0;
+  color: #eaebed;
+  height: 48px;
+  padding-left: 32px;
+  font-size: 1.4rem;
+  text-shadow: 1px 1px 2px black;
+}
+@media only screen and (max-width: 768px) {
+  nav h1 {
+    padding: 12px 0;
+  }
+}
+nav ul {
+  display: flex;
   list-style-type: none;
-  text-align: right;
-  width: 100%;
-  height: 100%;
+  flex-grow: 1;
+  margin: 0;
+}
+@media only screen and (max-width: 768px) {
+  nav ul {
+    flex-direction: column;
+    width: 100%;
+    padding: 0;
+  }
 }
 nav ul li {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  text-align: center;
+  flex-grow: 1;
   transition: background-color 0.5s;
 }
 nav ul li a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: #eaebed;
   font-weight: 800;
   text-decoration: none;
   text-shadow: 1px 1px 2px black;
-  width: 100%;
+  height: 48px;
   margin: 0;
-  padding: 22px 15px;
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 nav ul li:hover {
   background-color: #38b649;
@@ -82,254 +85,153 @@ nav ul li.selected a {
 main {
   display: flex;
   justify-content: center;
-  align-items: center;
-  font-size: 20px;
+  padding: 80px 24px 160px;
 }
-
+@media only screen and (max-width: 992px) {
+  main {
+    padding-bottom: 240px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  main {
+    padding: 180px 24px 240px;
+  }
+}
 main.projects {
   flex-direction: column;
-  margin: 0 20px;
 }
-
-div.grid {
-  display: grid;
-  grid-template: 1fr 1fr/1fr 1fr;
-}
-
-div {
+main h2 {
   margin: 0;
-  display: inline-block;
-  text-align: justify;
-}
-
-div.info {
-  font-size: 1.1rem;
-  margin: 5%;
-}
-
-section img {
-  border: none;
-}
-section img.tic-tac-toe {
-  border: none;
-  border-top: 10px solid #e63946;
-  border-bottom: 10px solid #e63946;
-}
-section img.planner {
-  border: 1px solid grey;
-}
-
-h2 {
-  margin: 0;
-  width: 100%;
-  padding: 24px 0;
   text-align: center;
   font-size: 2.5rem;
 }
-
-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 24px 32px;
-}
-section h3 {
-  margin: 0 0 24px;
-  text-align: center;
-  font-size: 2rem;
-}
-section a {
-  display: flex;
-  justify-content: center;
-}
-section img {
-  border: 10px solid #0b3173;
-}
-section p.link {
-  margin: 12px 0;
-  text-align: center;
-}
-
-h3 {
+main h3 {
   text-align: center;
   font-size: 1.2rem;
 }
-
-img {
-  width: 90%;
+main img {
+  margin-left: 48px;
+  height: 400px;
   border: 10px solid #0b3173;
 }
-
-a {
+@media only screen and (max-width: 1200px) {
+  main img {
+    height: 300px;
+  }
+}
+@media only screen and (max-width: 992px) {
+  main img.decorative {
+    display: none;
+  }
+}
+main a {
   text-decoration: none;
   color: #014421;
   transition: color 0.5s;
 }
-
 main a:hover {
   color: #32cd32;
+}
+main section {
+  display: flex;
+  flex-direction: column;
+}
+main section h3 {
+  text-align: center;
+  font-size: 2rem;
+}
+main section img {
+  border: 10px solid #0b3173;
+}
+main section p.link {
+  margin: 12px 0;
+  text-align: center;
+}
+main div {
+  text-align: justify;
+}
+main div.info {
+  width: 600px;
+}
+main div.info p.resume {
+  text-align: center;
+}
+main div.grid {
+  display: grid;
+  grid-template: 1fr 1fr/1fr 1fr;
+}
+@media only screen and (max-width: 992px) {
+  main div.grid {
+    display: flex;
+    flex-direction: column;
+  }
+}
+main div.grid section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 12px 60px;
+}
+@media only screen and (max-width: 768px) {
+  main div.grid section {
+    padding: 0;
+  }
+}
+main div.grid section a {
+  display: flex;
+  justify-content: center;
+}
+main div.grid section a img {
+  height: 300px;
+  margin: 0;
+  border: none;
+}
+@media only screen and (max-width: 1200px) {
+  main div.grid section a img {
+    height: 240px;
+  }
+}
+@media only screen and (max-width: 992px) {
+  main div.grid section a img {
+    width: 100%;
+    height: unset;
+  }
 }
 
 footer {
   background-color: #014421;
-  font-size: 1.2rem;
   width: 100%;
   color: white;
   text-align: center;
-  padding: 20px;
+  padding: 24px 0;
   position: fixed;
   bottom: 0;
   text-shadow: 1px 1px 2px black;
 }
 footer h2 {
   margin: 0;
-  padding: 0 0 24px;
-  font-size: 1.6rem;
+  padding: 0 0 16px;
+  font-size: 1.2rem;
 }
 footer p {
   display: flex;
   justify-content: center;
   margin: 0;
 }
+@media only screen and (max-width: 992px) {
+  footer p {
+    flex-direction: column;
+  }
+}
 footer p span {
-  font-size: 1rem;
+  font-size: 0.8rem;
   margin: 0 20px;
+}
+@media only screen and (max-width: 992px) {
+  footer p span {
+    margin: 8px 0;
+  }
 }
 footer p span a {
   color: white;
-}
-
-@media only screen and (max-width: 1170px) {
-  h1 {
-    font-size: 1.4rem;
-    width: 50%;
-  }
-  nav ul li a {
-    font-size: 1em;
-    padding: 25px 0;
-  }
-  div.info {
-    font-size: 1rem;
-  }
-  div.info h2 {
-    font-size: 2.2em;
-  }
-  main img {
-    width: 100%;
-  }
-  div.flex-container img {
-    width: 90%;
-  }
-}
-@media only screen and (max-width: 1100px) {
-  h1 {
-    font-size: 1.3rem;
-    width: 50%;
-  }
-  nav ul li a {
-    font-size: 1em;
-    padding: 25px 0;
-  }
-  div.info {
-    font-size: 0.9rem;
-  }
-  div.info h2 {
-    font-size: 1.7em;
-  }
-}
-@media only screen and (max-width: 860px) {
-  main {
-    flex-direction: column;
-    align-items: center;
-    margin-left: 1%;
-  }
-  main h2 {
-    font-size: 1.3em;
-  }
-  main div {
-    width: 80%;
-    font-size: 0.9em;
-  }
-  main div.info {
-    margin: 0;
-  }
-  main div.flex-container {
-    display: block;
-  }
-  main div.flex-container section {
-    width: 100%;
-  }
-}
-@media only screen and (max-width: 780px), (max-device-width: 480px) {
-  nav {
-    display: block;
-    align-items: center;
-    height: 178px;
-    padding: 0;
-    padding-bottom: 34px;
-  }
-  nav ul {
-    padding: 0;
-    display: block;
-    height: 40px;
-  }
-  nav li {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    padding-left: 40px;
-    padding-top: 10px;
-    padding-bottom: 5px;
-    text-align: justify;
-  }
-  nav li a {
-    height: 45px;
-    width: 95%;
-    text-align: justify;
-  }
-  header nav ul li a {
-    font-size: 1.1rem;
-    padding-top: 40px;
-  }
-  h1 {
-    font-size: 1.3rem;
-    text-align: justify;
-    width: 95%;
-  }
-  h2 {
-    padding-top: 50px;
-  }
-  h2.main-heading {
-    padding: 280px 0 0 30px;
-  }
-  main {
-    width: 90%;
-    margin: 220px auto;
-    padding: 10px;
-    flex-direction: column;
-    align-items: center;
-    margin-left: 0;
-  }
-  main div {
-    margin-top: 30px;
-    width: 100%;
-  }
-  main div.info {
-    width: 100%;
-    font-size: 1rem;
-  }
-  main div.flex-container {
-    flex-direction: column;
-  }
-  main section {
-    width: 100%;
-    padding-left: 0;
-  }
-  main section h3 {
-    font-size: 1.3rem;
-  }
-  footer p {
-    font-size: 0.8rem;
-  }
 }
