--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -27,60 +27,62 @@ body {
   font-family: 'Cormorant Garamond';
 }
 
-header {
-  height: 80px;
-}
-
-h1 {
-  @include position();
-  color: $secondary-font-color;
-  width: 60%;
-  padding-left: 40px;
-  padding-bottom: 12px;
-  padding-top: 5px;
-  font-size: 2rem;
-  text-shadow: 1px 1px 2px black;
-}
-
 nav {
   background-color: $background-color;
-  height: 80px;
   display: flex;
   align-items: center;
   position: fixed;
   top: 0;
   width: 100%;
 
-  ul {
-    @include position();
+  @media only screen and (max-width: 768px) {
+    flex-direction: column;
+  }
+
+  h1 {
     display: flex;
-    justify-content: space-around;
     align-items: center;
+    flex-grow: 1;
+    margin: 0;
+    color: $secondary-font-color;
+    height: 48px;
+    padding-left: 32px;
+    font-size: 1.4rem;
+    text-shadow: 1px 1px 2px black;
+
+    @media only screen and (max-width: 768px) {
+      padding: 12px 0;
+    }
+  }
+
+  ul {
+    display: flex;
     list-style-type: none;
-    text-align: right;
-    width: 100%;
-    height: 100%;
+    flex-grow: 1;
+    margin: 0;
+
+    @media only screen and (max-width: 768px) {
+      flex-direction: column;
+      width: 100%;
+      padding: 0;
+    }
 
     li {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      height: 100%;
-      text-align: center;
+      flex-grow: 1;
       transition: background-color 0.5s;
 
       a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         color: $secondary-font-color;
         font-weight: 800;
         text-decoration: none;
         text-shadow: 1px 1px 2px black;
-        width: 100%;
+        height: 48px;
         margin: 0;
-        padding: 22px 15px;
-        font-size: 1.2rem;
+        font-size: 1rem;
       }
-
     }
 
     li:hover {
@@ -100,116 +102,144 @@ nav {
 main {
   display: flex;
   justify-content: center;
-  align-items: center;
-  font-size: 20px;
-}
+  padding: 80px 24px 160px;
 
-main.projects {
-  flex-direction: column;
-  margin: 0 20px;
-}
-
-div.grid {
-  display: grid;
-  grid-template: 1fr 1fr / 1fr 1fr;
-}
-
-div {
-  @include position();
-  text-align: justify;
-}
-
-div.info {
-  font-size: 1.1rem;
-  margin: 5%;
-}
-
-section {
-  img {
-    border: none;
+  @media only screen and (max-width: 992px) {
+    padding-bottom: 240px;
   }
 
-  img.tic-tac-toe {
-    border: none;
-    border-top: 10px solid #e63946;
-    border-bottom: 10px solid #e63946;
+  @media only screen and (max-width: 768px) {
+    padding: 180px 24px 240px;
   }
 
-  img.planner {
-    border: 1px solid grey;
+  &.projects {
+    flex-direction: column;
   }
-}
 
-h2 {
-  margin: 0;
-  width: 100%;
-  padding: 24px 0;
-  text-align: center;
-  font-size: 2.5rem;
-}
-
-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 24px 32px;
+  h2 {
+    margin: 0;
+    text-align: center;
+    font-size: 2.5rem;
+  }
 
   h3 {
-    margin: 0 0 24px;
     text-align: center;
-    font-size: 2rem;
+    font-size: 1.2rem;
   }
+
+  img {
+    margin-left: 48px;
+    height: 400px;
+    border: 10px solid $primary-font-color;
+
+    @media only screen and (max-width: 1200px) {
+      height: 300px;
+    }
+
+    &.decorative {
+      @media only screen and (max-width: 992px) {
+        display: none;
+      }
+    }
+  }  
 
   a {
-    display: flex;
-    justify-content: center;
-  }
+    text-decoration: none;
+    color: $background-color;
+    transition: color 0.5s;
   
-  img {
-    border: 10px solid $primary-font-color;
+    &:hover {
+      color: $hover-link;
+    }  
   }
 
-  p.link {
-    margin: 12px 0;
-    text-align: center;
+  section {
+    display: flex;
+    flex-direction: column;
+  
+    h3 {
+      text-align: center;
+      font-size: 2rem;
+    }
+    
+    img {
+      border: 10px solid $primary-font-color;
+    }
+  
+    p.link {
+      margin: 12px 0;
+      text-align: center;
+    }
   }
-}
 
-h3 {
-  text-align: center;
-  font-size: 1.2rem;
-}
+  div {
+    text-align: justify;
 
-img {
-  width: 90%;
-  border: 10px solid $primary-font-color;
-}
+    &.info {
+      width: 600px;
 
-a {
-  text-decoration: none;
-  color: $background-color;
-  transition: color 0.5s;
-}
+      p.resume {
+        text-align: center;
+      }
+    }
 
-main a:hover {
-  color: $hover-link;
+    &.grid {
+      display: grid;
+      grid-template: 1fr 1fr / 1fr 1fr;
+
+      @media only screen and (max-width: 992px) {
+        display: flex;
+        flex-direction: column;
+      }
+    
+      section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 12px 60px;
+
+        @media only screen and (max-width: 768px) {
+          padding: 0;
+        }
+
+        a {
+          display: flex;
+          justify-content: center;
+
+          img {
+            height: 300px;
+            margin: 0;
+            border: none;
+  
+            @media only screen and (max-width: 1200px) {
+              height: 240px;
+            }
+  
+            @media only screen and (max-width: 992px) {
+              width: 100%;
+              height: unset;
+            }
+          }
+        }
+      }
+    }
+  }
 }
 
 footer {
   background-color: $background-color;
-  font-size: 1.2rem;
   width: 100%;
   color: white;
   text-align: center;
-  padding: 20px;
+  padding: 24px 0;
   position: fixed;
   bottom: 0;
   text-shadow: 1px 1px 2px black;
 
   h2 {
     margin: 0;
-    padding: 0 0 24px;
-    font-size: 1.6rem;
+    padding: 0 0 16px;
+    font-size: 1.2rem;
   }
 
   p {
@@ -217,178 +247,21 @@ footer {
     justify-content: center;
     margin: 0;
 
+    @media only screen and (max-width: 992px) {
+      flex-direction: column;
+    }
+
     span {
-      font-size: 1rem;
+      font-size: 0.8rem;
       margin: 0 20px;
+
+      @media only screen and (max-width: 992px) {
+        margin: 8px 0;
+      }
   
       a {
         color: white;
       }
     }
-  }
-}
-
-@media only screen and (max-width: 1170px) {
-  h1 {
-    font-size: 1.4rem;
-    width: 50%;
-  }
-
-  nav ul li a {
-    font-size: 1em;
-    padding: 25px 0;
-  }
-
-  div.info {
-    font-size: 1rem;
-
-    h2 {
-      font-size: 2.2em;
-    }
-  }
-
-  main img {
-    width: 100%;
-  }
-
-  div.flex-container img {
-    width: 90%;
-  }
-}
-
-@media only screen and (max-width: 1100px) {
-  h1 {
-    font-size: 1.3rem;
-    width: 50%;
-  }
-
-  nav ul li a {
-    font-size: 1em;
-    padding: 25px 0;
-  }
-
-  div.info {
-    font-size: 0.9rem;
-
-    h2 {
-      font-size: 1.7em;
-    }
-  }
-}
-
-@media only screen and (max-width: 860px) {
-  main {
-    flex-direction: column;
-    align-items: center;
-    margin-left: 1%;
-
-    h2 {
-      font-size: 1.3em;
-    }
-
-    div {
-      width: 80%;
-      font-size: 0.9em;
-    }
-
-    div.info {
-      margin: 0;
-    }
-
-    div.flex-container {
-      display: block;
-
-      section {
-        width: 100%;
-      }
-    }
-  }
-}
-
-@media only screen and (max-width: 780px), (max-device-width: 480px) {
-  nav {
-    display: block;
-    align-items: center;
-    height: 178px;
-    padding: 0;
-    padding-bottom: 34px;
-
-    ul {
-      padding: 0;
-      display: block;
-      height: 40px;
-    }
-
-      li {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        padding-left: 40px;
-        padding-top: 10px;
-        padding-bottom: 5px;
-        text-align: justify;
-
-        a {
-          height: 45px;
-          width: 95%;
-          text-align: justify;
-        }
-      }
-  }
-
-  header nav ul li a {
-    font-size: 1.1rem;
-    padding-top: 40px;
-  }
-
-  h1 {
-    font-size: 1.3rem;
-    text-align: justify;
-    width: 95%;
-  }
-
-  h2 {
-    padding-top: 50px;
-  }
-
-  h2.main-heading {
-    padding: 280px 0 0 30px;
-  }
-
-  main {
-    width: 90%;
-    margin: 220px auto;
-    padding: 10px;
-    flex-direction: column;
-    align-items: center;
-    margin-left: 0;
-
-    div {
-      margin-top: 30px;
-      width: 100%;
-    }
-
-    div.info {
-      width: 100%;
-      font-size: 1rem;
-    }
-
-    div.flex-container {
-      flex-direction: column;
-    }
-
-    section {
-      width: 100%;
-      padding-left: 0;
-
-      h3 {
-        font-size: 1.3rem;
-      }
-    }
-  }
-
-  footer p {
-    font-size: 0.8rem;
   }
 }
